# QtCodespaceTest

./: CMakeLists.txt  README.md  frozen.json  watch-test.sh
.devcontainer/: Dockerfile  devcontainer.json
lib/: clickbusiness.h
qtsrc/: CMakeLists.txt  IClickMsg.h  Makefile  betterwidget.cpp  betterwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget2.cpp  mainwidget2.h  moc_mainwidget.cpp  moc_mainwidget2.cpp  qtsrc  qtsrc.pro
tests/: CMakeLists.txt  clickbusiness_tests.cpp
utils/: checkfrozen.js  freeze.js
